remove eis_client_id
